--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-NN_learned/betaMap1200.png
-NN_learned/enhanceMap1200.png
-NN_learned/MDNN_beta_1000.png
-NN_learned/MDNN_beta_1500.png
-NN_learned/MDNN_beta_300.png
-NN_learned/MDNN.png
-NN_learned/probabilityMap.png
+NN_learned/*.png
+NN_learned/NNmapping
+*/figures
